@@ -4,6 +4,7 @@ import com.microsoft.graph.models.User;
 import jakarta.servlet.http.HttpSession;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.modelmapper.ModelMapper;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
@@ -12,12 +13,18 @@ import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.servlet.view.RedirectView;
+import uk.gov.justice.laa.portal.landingpage.dto.AppDto;
+import uk.gov.justice.laa.portal.landingpage.dto.AppRoleDto;
+import uk.gov.justice.laa.portal.landingpage.dto.EntraUserDto;
 import uk.gov.justice.laa.portal.landingpage.dto.OfficeData;
 import uk.gov.justice.laa.portal.landingpage.model.PaginatedUsers;
 import uk.gov.justice.laa.portal.landingpage.model.ServicePrincipalModel;
 import uk.gov.justice.laa.portal.landingpage.model.UserModel;
 import uk.gov.justice.laa.portal.landingpage.model.UserRole;
 import uk.gov.justice.laa.portal.landingpage.service.UserService;
+import uk.gov.justice.laa.portal.landingpage.utils.RandomPasswordGenerator;
+import uk.gov.justice.laa.portal.landingpage.viewmodel.AppRoleViewModel;
+import uk.gov.justice.laa.portal.landingpage.viewmodel.AppViewModel;
 
 import java.io.IOException;
 
@@ -43,6 +50,7 @@ import static uk.gov.justice.laa.portal.landingpage.utils.RestUtils.getObjectFro
 public class UserController {
 
     private final UserService userService;
+    private final ModelMapper mapper;
 
     /**
      * Retrieves a list of users from Microsoft Graph API.
@@ -91,10 +99,8 @@ public class UserController {
      */
     @GetMapping("/userlist")
     public String displaySavedUsers(Model model) {
-
-        List<UserModel> users = userService.getSavedUsers();
+        List<EntraUserDto> users = userService.getSavedUsers();
         model.addAttribute("users", users);
-
         return "users";
     }
 
@@ -115,7 +121,7 @@ public class UserController {
     public String manageUser(@PathVariable String id, Model model) {
         User user = userService.getUserById(id);
         String lastLoggedIn = userService.getLastLoggedInByUserId(id);
-        List<UserRole> userAppRoles = userService.getUserAppRolesByUserId(id);
+        List<AppRoleDto> userAppRoles = userService.getUserAppRolesByUserId(id);
         model.addAttribute("user", user);
         model.addAttribute("lastLoggedIn", lastLoggedIn);
         model.addAttribute("userAppRoles", userAppRoles);
@@ -152,9 +158,12 @@ public class UserController {
     @GetMapping("/user/create/services")
     public String selectUserApps(Model model, HttpSession session) {
         List<String> selectedApps = getListFromHttpSession(session, "apps", String.class).orElseGet(ArrayList::new);
-        List<ServicePrincipalModel> apps = userService.getServicePrincipals().stream()
-                .map(servicePrincipal -> new ServicePrincipalModel(servicePrincipal, selectedApps.contains(servicePrincipal.getAppId())))
-                .collect(Collectors.toList());
+        List<AppViewModel> apps = userService.getApps().stream()
+                .map(appDto -> {
+                    AppViewModel appViewModel = mapper.map(appDto, AppViewModel.class);
+                    appViewModel.setSelected(selectedApps.contains(appDto.getId()));
+                    return appViewModel;
+                }).toList();
         model.addAttribute("apps", apps);
         User user = getObjectFromHttpSession(session, "user", User.class).orElseGet(User::new);
         model.addAttribute("user", user);
@@ -171,14 +180,15 @@ public class UserController {
     @GetMapping("/user/create/roles")
     public String getSelectedRoles(Model model, HttpSession session) {
         List<String> selectedApps = getListFromHttpSession(session, "apps", String.class).orElseGet(ArrayList::new);
-        List<UserRole> roles = userService.getAllAvailableRolesForApps(selectedApps);
+        List<AppRoleDto> roles = userService.getAllAvailableRolesForApps(selectedApps);
         List<String> selectedRoles = getListFromHttpSession(session, "roles", String.class).orElseGet(ArrayList::new);
-        for (UserRole role : roles) {
-            if (selectedRoles.contains(role.getAppRoleId())) {
-                role.setSelected(true);
-            }
-        }
-        model.addAttribute("roles", roles);
+        List<AppRoleViewModel> appRoleViewModels = roles.stream()
+                .map(appRoleDto -> {
+                    AppRoleViewModel viewModel = mapper.map(appRoleDto, AppRoleViewModel.class);
+                    viewModel.setSelected(selectedRoles.contains(appRoleDto.getId().toString()));
+                    return viewModel;
+                }).toList();
+        model.addAttribute("roles", appRoleViewModels);
         return "add-user-roles";
     }
 
@@ -208,14 +218,14 @@ public class UserController {
     public String addUserCheckAnswers(Model model, HttpSession session) {
         List<String> selectedApps = getListFromHttpSession(session, "apps", String.class).orElseGet(ArrayList::new);
         if (!selectedApps.isEmpty()) {
-            List<UserRole> roles = userService.getAllAvailableRolesForApps(selectedApps);
+            List<AppRoleDto> roles = userService.getAllAvailableRolesForApps(selectedApps);
             List<String> selectedRoles = getListFromHttpSession(session, "roles", String.class).orElseGet(ArrayList::new);
-            Map<String, List<UserRole>> cyaRoles = new HashMap<>();
-            for (UserRole role : roles) {
-                if (selectedRoles.contains(role.getAppRoleId())) {
-                    List<UserRole> appRoles = cyaRoles.getOrDefault(role.getAppId(), new ArrayList<>());
-                    appRoles.add(role);
-                    cyaRoles.put(role.getAppId(), appRoles);
+            Map<String, List<AppRoleViewModel>> cyaRoles = new HashMap<>();
+            for (AppRoleDto role : roles) {
+                if (selectedRoles.contains(role.getId())) {
+                    List<AppRoleViewModel> appRoles = cyaRoles.getOrDefault(role.getApp().getId(), new ArrayList<>());
+                    appRoles.add(mapper.map(role, AppRoleViewModel.class));
+                    cyaRoles.put(role.getApp().getId(), appRoles);
                 }
             }
             model.addAttribute("roles", cyaRoles);
@@ -263,11 +273,11 @@ public class UserController {
     @GetMapping("/users/edit/{id}/roles")
     public String getUserRoles(@PathVariable String id, Model model) {
         User user = userService.getUserById(id);
-        List<UserRole> userRoles = userService.getUserAppRolesByUserId(id);
-        List<UserRole> availableRoles = userService.getAllAvailableRoles();
+        List<AppRoleDto> userRoles = userService.getUserAppRolesByUserId(id);
+        List<AppRoleDto> availableRoles = userService.getAllAvailableRoles();
 
         Set<String> userAssignedRoleIds = userRoles.stream()
-                .map(UserRole::getAppRoleId)
+                .map(AppRoleDto::getId)
                 .collect(Collectors.toSet());
 
         model.addAttribute("user", user);
